DB introduced - исправлена работа с жанрами и полями и исключен и жанрами - после ревью